src/test/data/tests/const/valid/constant_expression.c
int test_value = (
    (-5) * 4 + (20 / 2) - (15 % 4) << 2 >> 1
    & (~0 & 255) | (1 << 3) ^ 85
    + ((3 < 5) ? 20 : 40)
    + ((7 <= 7) ? 10 : 20)
    + ((10 > 5) ? 1 : 2)
    + ((8 >= 8) ? 3 : 4)
    + ((5 == 5) ? 5 : 6)
    + ((6 != 7) ? 7 : 8)
    + ((1 && 0) ? 9 : 10)
    + ((0 || 1) ? 11 : 12)
    + ((!0) ? 13 : 14));

int main(void) {
    return test_value;
}
