src/test/data/tests/const/invalid/division_by_zero.c
int test_value = 10 / 0;

int main(void) {
    return test_value;
}
